force-app/main/default/objects/SalesOffices__mdt/SalesOffices__mdt.object-meta.xml
<CustomObject>
    <label>Escritório de Vendas</label>
    <pluralLabel>Escritórios de Vendas</pluralLabel>
</CustomObject>