force-app/main/default/objects/SalesOffices__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>