force-app/main/default/objects/SalesOffices__mdt/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Centro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>