force-app/main/default/objects/SalesOffices__mdt/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Escritório de Vendas</label>
    <length>50</length>
    <type>Text</type>
</CustomField>